Stage 2: LLM + TTS conversational pipeline code, git clone deploy approach
- Server: async LLM client (SSE streaming), TTS client, sentence chunker,
  chat WebSocket handler, supervisord config, entrypoint script
- Client: terminal chat client with audio playback
- Deploy: git clone approach (no custom Docker image push needed)
- Dockerfile.stage2 kept for reference
- Updated AGENTS.md and plan with deployment decision history
- .gitignore: added recordings/, output/ for voice samples
- .gitattributes: ensure .sh files use LF line endings

--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,11 @@ docker/.env
 *.mp3
 *.mp4
 *.avi
+
+# Voice recordings (personal voice samples)
+recordings/
+
+# TTS/test output
+output/
 recordings/
 output/
