Enable torch.compile for TTS (COMPILE=1) + warmup request
- Set COMPILE=1 environment variable on TTS program in supervisord.conf
- Increase startsecs to 30 for torch.compile warmup overhead
- Add warmup request in entrypoint after TTS server starts
- Expected ~10x TTS inference speedup (15->150 tokens/s)

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -29,11 +29,12 @@ stderr_logfile_maxbytes=10MB
 [program:tts]
 command=bash start_server.sh
 directory=/app
+environment=COMPILE="1"
 priority=20
 autostart=true
 autorestart=true
 startretries=3
-startsecs=10
+startsecs=30
 stdout_logfile=/var/log/supervisor/tts.log
 stderr_logfile=/var/log/supervisor/tts_err.log
 stdout_logfile_maxbytes=10MB
