--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "httpx>=0.27,<1",
     "msgpack>=1.0,<2",
     "ormsgpack>=1.5,<2",
+    "python-multipart>=0.0.9",
     "uvicorn[standard]>=0.30,<1",
     "websockets>=13,<17",
 ]
